CardPage: CSS: fix toolbar z-index

--- a/src/css/components/CardPage/card-page.scss
+++ b/src/css/components/CardPage/card-page.scss
@@ -4,7 +4,8 @@
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%
+      width: 100%;
+      z-index: 1;
    }
 
    .wrap {
